3822B1PE2/3_naive_gemm_omp/korovin_nikita/log.txt
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/3_naive_gemm_omp/korovin_nikita/naive_gemm_omp.cpp: In function ‘std::vector<float> NaiveGemmOMP(const std::vector<float>&, const std::vector<float>&, int)’:
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/3_naive_gemm_omp/korovin_nikita/naive_gemm_omp.cpp:13:11: error: ‘size_t’ does not name a type
   13 |     const size_t matrix_size = static_cast<size_t>(n) * n;
      |           ^~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/3_naive_gemm_omp/korovin_nikita/naive_gemm_omp.cpp:4:1: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
    3 | #include <omp.h>
  +++ |+#include <cstddef>
    4 | 
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/3_naive_gemm_omp/korovin_nikita/naive_gemm_omp.cpp:14:26: error: ‘matrix_size’ was not declared in this scope
   14 |     std::vector<float> c(matrix_size, 0.0f);
      |                          ^~~~~~~~~~~
